--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -691,6 +691,55 @@
                             <div class="col-md-2"></div>
 
                             <div class="col-md-10 col-sm-12">
+                                <div class="row no-gutters">
+                                    <div class="col-md-3 col-sm-6">
+                                        <button type="button" class="btn btn-sm btn-outline-light fs-xs text-secondary btn-block mb-1" data-toggle="modal" data-target="#howCalcModal" >
+                                            <i class="fas fa-info-circle mr-1" aria-hidden="true"></i>How calculated
+                                        </button>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="dropdown">
+                                            <button class="btn btn-sm btn-block btn-outline-light fs-xs text-secondary dropdown-toggle" 
+                                            type="button"
+                                            id="downloadDD"
+                                            data-toggle="dropdown"
+                                            aria-haspopup="true"
+                                            aria-expanded="false"
+                                            ><i class="fa fa-download mr-1"></i>Download Data
+                                            </button>
+                                            <div class="dropdown-menu dropdown-menu-right" 
+                                            aria-labelledby="downloadDD">
+                                            <a class="dropdown-item buttons-csv btn-outline-info" id="chartView"><i class="fa fa-download mr-1"></i>Download this view</a>
+                                            <a class="dropdown-item buttons-csv btn-outline-info" id="allData"><i class="fa fa-download mr-1"></i>Download full data table</a>
+                                            <a class="dropdown-item btn-outline-info" href="https://github.com/nychealth/EHDP-data/tree/production/indicators" target="_blank"><i class="fas fa-external-link-alt mr-1"></i>Data Github repo</a>
+                                            <!--<a class="dropdown-item buttons-csv btn-outline-info" id="thisView">Current table view</a>-->        
+                                            <!--<a class="dropdown-item buttons-csv btn-outline-info" id="rawData">Raw data for this indicator</a>-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <button class="btn btn-sm btn-block btn-outline-light fs-xs text-secondary"
+                                        onclick="copyCitation()" id="citeButton"><i class="fas fa-copy mr-1"></i>Copy citation</button>
+                                            <input type="text" id="citeText" value=""
+                                            style="display:inline-block; width:100%; height: 40px; font-size: 14px;"
+                                            class="my-2 sr-only">
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <button type="button" class="btn btn-sm btn-outline-light fs-xs text-secondary btn-block mb-1" onclick="printModal()">
+                                            <i class="fas fa-print mr-1" aria-hidden="true"></i>Print chart
+                                        </button>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="row mb-4">
+                            <div class="col-md-2"></div>
+
+                            <!-- Data sources -->
+                            <div class="col-md-10 col-sm-12">
                                     <div class=" asidebox visFooterBox">
                                         <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>Data sources</span>:
                                         <p class="fs-xs indicator-sources"></p>
@@ -698,49 +747,7 @@
                             </div>
                         </div>
 
-                        <div class="row">
-                            <div class="col-md-2"></div>
 
-                            <div class="col-md-6">
-                                <div class="asidebox visFooterBox mb-2">
-                                    <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>How calculated</span>:
-                                    <p class="fs-xs indicator-measures"></p>
-                                </div>
-                            </div>
-
-                            <div class="col-md-4">
-                                <button type="button" class="btn btn-sm btn-outline-light text-secondary btn-block mb-1" onclick="printModal()">
-                                    <i class="fas fa-print mr-1" aria-hidden="true"></i>Print chart
-                                </button>
-
-                                <div class="dropdown mb-1">
-                                    <button class="btn btn-sm btn-block btn-outline-light text-secondary dropdown-toggle" 
-                                    type="button"
-                                    id="downloadDD"
-                                    data-toggle="dropdown"
-                                    aria-haspopup="true"
-                                    aria-expanded="false"
-                                    ><i class="fa fa-download mr-1"></i>Download Data
-                                    </button>
-                                    <div class="dropdown-menu dropdown-menu-right" 
-                                    aria-labelledby="downloadDD">
-                                    <a class="dropdown-item buttons-csv btn-outline-info" id="chartView"><i class="fa fa-download mr-1"></i>Download this view</a>
-                                    <a class="dropdown-item buttons-csv btn-outline-info" id="allData"><i class="fa fa-download mr-1"></i>Download full data table</a>
-                                    <a class="dropdown-item btn-outline-info" href="https://github.com/nychealth/EHDP-data/tree/production/indicators" target="_blank"><i class="fas fa-external-link-alt mr-1"></i>Data Github repo</a>
-                                    <!--<a class="dropdown-item buttons-csv btn-outline-info" id="thisView">Current table view</a>-->        
-                                    <!--<a class="dropdown-item buttons-csv btn-outline-info" id="rawData">Raw data for this indicator</a>-->
-                                    </div>
-                                </div>
-
-                                <button class="btn btn-sm btn-block btn-outline-light text-secondary"
-                                onclick="copyCitation()" id="citeButton"><i class="fas fa-copy mr-1"></i>Copy citation</button>
-                                    <input type="text" id="citeText" value=""
-                                    style="display:inline-block; width:100%; height: 40px; font-size: 14px;"
-                                    class="my-2 sr-only">
-
-                            </div>
-
-                        </div>
 
                         <!--.footer -->
 
@@ -921,6 +928,24 @@
                 </div>
             </div>
         </div>
+
+                <!-- Data Modal - How calculated -->
+                <div class="modal fade" id="howCalcModal" tabindex="-1" role="dialog" aria-labelledby="howCalcModalLabel"
+                aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="howCalcModalLabel"><i  class="fas fa-question-circle mr-1" aria-hidden="true"></i>How calculated</h5>
+                            </div>
+                            <div class="modal-body">
+                                <p class="indicator-measures"></p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
         <!-- Print Modal -->
         <div class="modal fade" id="printModal" tabindex="-1" role="dialog" aria-labelledby="printModalTitle" aria-hidden="true">
