source de-duping

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -741,8 +741,7 @@
                             <!-- Data sources -->
                             <div class="col-md-10 col-sm-12">
                                     <div class=" asidebox visFooterBox">
-                                        <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>Data sources</span>:
-                                        <p class="fs-xs indicator-sources"></p>
+                                        <span class="fs-xs font-weight-bold">Source</span>: <span class="fs-xs indicator-sources"></span> <span class="fs-xs indicator-sources"></span>
                                     </div>
                             </div>
                         </div>
