improve footer layout and chart source de-duping

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -495,7 +495,7 @@
 
 
                 <!-- visualization elements -->
-                <div class="tab-content bg-white mb-2 border-top" id="tabs-01-content">
+                <div class="tab-content bg-white border-top" id="tabs-01-content">
             
 
                 <!-- TABLE TAB -->
@@ -571,11 +571,6 @@
                                         <!-- INSERT MENU ITEMS HERE -->
                                     </div>
                                 </div>
-
-
-                                <button type="button" class="btn btn-sm btn-outline-secondary fs-xs btn-block" onclick="printModal()">
-                                    <i class="fas fa-print mr-1" aria-hidden="true"></i>Print map
-                                </button>
 
                             </div>
                         </div>
@@ -687,7 +682,19 @@
 
 
                         <!-- FOOTER BUSINESS -->
+
                         <div class="row mb-2">
+                            <div class="col-md-2"></div>
+
+                            <!-- Data sources -->
+                            <div class="col-md-10 col-sm-12">
+                                    <div class="visFooterBox">
+                                        <span class="fs-xs font-weight-bold">Source:</span> <span class="fs-xs indicator-sources"></span> <span class="fs-xs indicator-sources"></span>
+                                    </div>
+                            </div>
+                        </div>
+
+                        <div class="row mt-3 mb-4">
                             <div class="col-md-2"></div>
 
                             <div class="col-md-10 col-sm-12">
@@ -735,16 +742,7 @@
                         </div>
 
 
-                        <div class="row mb-4">
-                            <div class="col-md-2"></div>
 
-                            <!-- Data sources -->
-                            <div class="col-md-10 col-sm-12">
-                                    <div class=" asidebox visFooterBox">
-                                        <span class="fs-xs font-weight-bold">Source</span>: <span class="fs-xs indicator-sources"></span> <span class="fs-xs indicator-sources"></span>
-                                    </div>
-                            </div>
-                        </div>
 
 
 
