improve notes in save/print modal

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -611,7 +611,7 @@
                                  <!-- INSERT TREND CHART HERE -->
                                 <div id="trend" class="vis-bucket"></div>
 
-                                <div id="trend-unreliability" class="pt-2 hide my-1">
+                                <div id="trend-unreliability" class="pt-2 hide my-1 fs-xs">
                                     <!-- INSERT UNRELIABILITY FLAGS HERE -->
                                 </div>
 
@@ -689,7 +689,7 @@
                             <!-- Data sources -->
                             <div class="col-md-10 col-sm-12">
                                     <div class="visFooterBox">
-                                        <span class="fs-xs font-weight-bold">Source:</span> <span class="fs-xs indicator-sources"></span> <span class="fs-xs indicator-sources"></span>
+                                        <span class="fs-xs font-weight-bold">Source:</span> <p class="fs-xs indicator-sources"></p>
                                     </div>
                             </div>
                         </div>
@@ -957,6 +957,10 @@
 
                 <div id="printVis" style="height: 400px; width:100%;" class="vis-print-modal">
                     Vis container
+                </div>
+
+                <div id="modalFootnotes" class="fs-xs p-1 pl-3">
+
                 </div>
             
                 </div>
