deactive chart saver btn for table

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -531,7 +531,7 @@
                                 <!-- INSERT SUMMARY TABLE HERE -->
                             </div>
 
-                            <div id="table-unreliability" class="pt-2 hide my-1">
+                            <div id="table-unreliability" class="pt-2 hide my-1 fs-xs">
                                 <!-- INSERT UNRELIABILITY FLAGS HERE -->
                             </div>
                         </div>
@@ -578,7 +578,7 @@
                         <div class="col-md-10">
                             <div id="map" class="vis-bucket"></div>
 
-                            <div id="map-unreliability" class="pt-2 hide my-1">
+                            <div id="map-unreliability" class="pt-2 hide my-1 fs-xs">
                                 <!-- INSERT UNRELIABILITY FLAGS HERE -->
                             </div>
                         </div>
@@ -668,7 +668,7 @@
                                 <!-- INSERT LINKS CHART HERE -->
                                 <div id="links" class="vis-bucket"></div>
             
-                                <div id="links-unreliability" class="pt-2 hide my-1">
+                                <div id="links-unreliability" class="pt-2 hide my-1 fs-xs">
                                     <!-- INSERT UNRELIABILITY FLAGS HERE -->
                                 </div>
                             </div>
@@ -732,9 +732,9 @@
                                             class="my-2 sr-only">
                                     </div>
                                     <div class="col-md-3 col-sm-6">
-                                        <button type="button" class="btn btn-sm btn-outline-light fs-xs text-secondary btn-block mb-1" onclick="printModal()">
+                                        <a href="#" class="btn btn-sm btn-outline-light fs-xs text-secondary btn-block mb-1" onclick="printModal()" id="chartSaver">
                                             <i class="fas fa-save mr-1" aria-hidden="true"></i>Save chart
-                                        </button>
+                                        </a>
                                     </div>
 
                                 </div>
