fix notes and save button disabled on table

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -732,7 +732,7 @@
                                             class="my-2 sr-only">
                                     </div>
                                     <div class="col-md-3 col-sm-6">
-                                        <a href="#" class="btn btn-sm btn-outline-light fs-xs text-secondary btn-block mb-1" onclick="printModal()" id="chartSaver">
+                                        <a type="button" class="btn btn-sm btn-outline-light fs-xs text-secondary btn-block mb-1" onclick="printModal()" id="chartSaver">
                                             <i class="fas fa-save mr-1" aria-hidden="true"></i>Save chart
                                         </a>
                                     </div>
