--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -952,7 +952,7 @@
                 <h5 class="modal-title" id="printModalTitle">Save this visualization</h5>
                 </div>
                 <div class="modal-body">
-                Click the three dots in the upper-right-hand corner of the viz below, and choose "save as PNG" to save or print this visualization. This function works best on a desktop computer.
+                Use this view to screenshot or print this visualization. Youc an also click the three dots in the upper-right-hand corner of the chart and choose "save as PNG" or "save as SVG" to download the chart. This function works best on a desktop computer.
                     <hr class="my-1">
 
                 <div id="printVis" style="height: 400px; width:100%;" class="vis-print-modal">
