add related-data partial and style revisions to suit

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -236,6 +236,10 @@ $color-data-explorer: #0A408A;
   border-top: 8px solid #008939;
 }
 
+.related-border-sm {
+  border-top: 4px solid #008939;
+}
+
 .container-to-large {
     width: 100%;
     padding-right: 1rem;
