--- a/themes/dohmh/layouts/partials/keywords.html
+++ b/themes/dohmh/layouts/partials/keywords.html
@@ -1,8 +1,11 @@
-<div class="keywords p-1" data-pagefind-ignore="all">
+<div class="related-border-sm pt-2" data-pagefind-ignore="all">
 {{- if .Params.keywords -}}
-<span class="font-weight-bold">Keywords:</span>&nbsp; 
-    {{- range .Params.keywords -}}<a href="{{ "keywords/" | relLangURL }}{{ . | urlize }}/">{{ . }}</a> |&#32;
-    {{- end -}}
+<h5 class="font-weight-bold keywords fs-sm">Keywords:</h5>
+    <div class="fs-xs">
+        {{- range .Params.keywords -}}<a class="" href="{{ "keywords/" | relLangURL }}{{ . | urlize }}/">{{ . }}</a> |&#32;
+        {{- end -}}
+    </div>
+
 {{- end -}}
 </div>
 <!-- consider making that a pill, too-->
