annotate related footer

--- a/themes/dohmh/layouts/partials/related-footer-2.html
+++ b/themes/dohmh/layouts/partials/related-footer-2.html
@@ -1,3 +1,9 @@
+<!--
+  The related footer looks for .Params.related (a 'related' element of content's frontmatter).
+  If that exists, then it prints the related things, as well as the categories/key topics in a second column.
+  If no related frontmatter exists, then it will just match on categories, using mod-related-main and mod-related-small.
+-->
+
 <section data-pagefind-ignore="all" class="mt-lg-5">
     <div class="container mb-5">
         <div class="row">
