--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -168,7 +168,7 @@
   </div>
 
   <div class="row my-3">
-    <div class="col-4 mx-auto">
+    <div class="col-xs-12 col-sm-4 mx-auto">
       <div id="story-dropdown" class="dropdown" >
         <button class="btn btn-outline-primary btn-block dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           View story
@@ -183,7 +183,7 @@
       </div>
       
     </div>
-    <div class="col-8 mx-auto">
+    <div class="col-xs-12 col-sm-8 mx-auto">
       <div id="map">
         <button id="refreshButton" class="btn btn-sm btn-light btn-white"><i class="fas fa-undo" aria-hidden="true"> </i><span class="sr-only"> Reset</span></button>
       </div>
