--- a/themes/dohmh/layouts/about/section.html
+++ b/themes/dohmh/layouts/about/section.html
@@ -19,7 +19,7 @@
       <!-- Start posts -->
       <p class="home-label mt-4">Recent posts:</p>
       <div class="row">
-        {{- range first 3 ((where .Site.RegularPages.ByDate "Section" "about")) -}}
+        {{- range (where .Site.RegularPages.ByDate "Section" "about").Reverse -}}
         <div class="col-md-6 mb-2">
             <div class="card content-card mb-4">
                 <div class="card-content">
