footer to rtaq data features

--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -403,6 +403,9 @@
 
 </article>
 
+<!-- Related footer -->
+{{- partial "related-footer-2" . -}}
+
 <style>
     .modal-backdrop.show {
         opacity: 0.70;
