--- a/themes/dohmh/layouts/partials/related-footer-2.html
+++ b/themes/dohmh/layouts/partials/related-footer-2.html
@@ -17,8 +17,20 @@
                   <div class="fs-lg">
                     {{ if .Params.related }}
                       {{ range .Params.related }}
+
+                      {{ $icon := "" }}
+                      {{ if in .url "data-stories" }}
+                          {{ $icon ="<i class='fas fa-passport' aria-hidden='true'></i>" }}
+                      {{ else if in .url "data-explorer" }}
+                          {{ $icon = "<i class='fas fa-chart-line' aria-hidden='true'></i>" }}
+                      {{ else if in .url "data-features" }}
+                          {{ $icon = "<i class='fas fa-chart-bar' aria-hidden='true'></i>" }}
+                      {{ else if in .url "neighborhood-reports" }}
+                        {{ $icon = "<i class='fas fa-map-marked-alt' aria-hidden='true'></i>" }}
+                      {{ end }}
+
                         <a class="text-black" href="{{ .url }}">
-                          <span class='text-primary data-stories mr-2'><i class='fas fa-passport' aria-hidden='true'></i></span>{{ .title }}
+                          <span class='text-primary data-stories mr-2'>{{ safe.HTML $icon }}</span>{{ .title }}
                         </a>
                         <hr class="my-2">
                       {{ end }}
