Add partial to features

--- a/themes/dohmh/layouts/data-features/aqe.html
+++ b/themes/dohmh/layouts/data-features/aqe.html
@@ -286,6 +286,9 @@
 
 </article>
 
+<!-- Related footer -->
+{{- partial "related-footer-2" . -}}
+
 <!--This code uses the JS file specified in the page's frontmatter-->
 
 <script type="text/javascript" src="{{ .Params.customJS }}"></script>
