--- a/themes/dohmh/layouts/data-features/rmz.html
+++ b/themes/dohmh/layouts/data-features/rmz.html
@@ -191,6 +191,9 @@
 
 </article>
 
+<!-- Related footer -->
+{{- partial "related-footer-2" . -}}
+
 <!--bring in rmz JS -->
 <script type="text/javascript" src="rmz.js"></script>
 
