--- a/themes/dohmh/layouts/data-features/syndromic.html
+++ b/themes/dohmh/layouts/data-features/syndromic.html
@@ -163,6 +163,9 @@
 
 </article>
 
+<!-- Related footer -->
+{{- partial "related-footer-2" . -}}
+
 <!--bring in JS -->
 <script type="text/javascript" src="heatsyndrome.js"></script>
 
