--- a/themes/dohmh/layouts/data-features/hvi.html
+++ b/themes/dohmh/layouts/data-features/hvi.html
@@ -233,6 +233,9 @@
 
     </article>
 
+<!-- Related footer -->
+{{- partial "related-footer-2" . -}}
+
 <!-- This code uses the JS file specified in the page's frontmatter -->
 <script type="text/javascript" src="{{ .Params.accessibleAutocomplete }}"></script>
 
