Text and layer adjustments

--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -280,6 +280,7 @@
           collection occurred multiple times in the day (morning, afternoon,
           and evening) to capture how heat may vary throughout the day.</li>
       </ul>
+      Additional resources and references include Kemuning A. Adiputri's <a href='https://storymaps.arcgis.com/stories/4bda4f7fd7954640853f7ab76ef95403'>story map</a> on heat prostration shows historic heat victims across the study area between 1880-1940, using point addresses gained through historical newspapers in a randomized arrangement. This map aims to understand a pattern of reported heat victims (not to incorporate all victim data throughout history) to give a better understanding of the possible underlying factors."
           </div>
         </div>
 
