fix NR zip code display

--- a/themes/dohmh/layouts/nr-output/single.html
+++ b/themes/dohmh/layouts/nr-output/single.html
@@ -283,7 +283,9 @@
 
                                     {{- /*  insert zip code  */}}
 
-                                    {{- print $zip_codes -}}
+                                    {{- $zipCodesString := replace $zip_codes "," ", " -}}
+
+                                    {{- print $zipCodesString -}}
 
                                 </span>.
                             </p>
