revise related footer KT ingestion to simplify

--- a/themes/dohmh/layouts/partials/mod-related-small.html
+++ b/themes/dohmh/layouts/partials/mod-related-small.html
@@ -1,22 +1,17 @@
 
-{{- $page_link := $.content.RelPermalink -}}
+<!-- via dict, cats is the host page's frontmatter categories -->
 {{- $cats := $.content.Params.categories -}}
-{{- $layout := .layout -}}
 
-{{- $extraClass := .extraClass -}}
 <!-- range through the section passed into this partial (key-topics) -->
-{{- range first 4 (where $.content.Site.RegularPages "Section" .section) -}}
-    {{- $page := . }}
+{{- range  (where $.content.Site.RegularPages "Section" "key-topics") -}}
+
     {{- $has_common_cats := intersect $cats .Params.categories | len | lt 0 -}}
         {{- if  $has_common_cats -}}
 
-          {{- if eq $layout "singlelist" -}}
           <a class="text-black" href="{{ .RelPermalink }}">
             {{ .Title }}
           </a>
           <hr class="my-2">
-
-          {{- end -}}
 
         {{- end -}}
 
