--- a/themes/dohmh/layouts/partials/related-footer-2.html
+++ b/themes/dohmh/layouts/partials/related-footer-2.html
@@ -49,7 +49,7 @@
                   <hr class="my-2">
                 </div>
                   <div>
-                    {{- partial "mod-related-small" (dict "section" "key-topics" "layout" "singlelist" "content" . ) -}}
+                    {{- partial "mod-related-small" (dict  "content" . ) -}}
                 </div>
                 </div>
               </div>
